backend/.clippy-baseline.txt

    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.94.0/index.html#too_many_arguments
    = note: `#[warn(clippy::too_many_arguments)]` on by default
    |
    |                                                ^^ expected `&str`, found integer
    |                                         ^^^ expected `&str`, found integer
    |                                        ^^^^ expected `&str`, found floating-point number
    |                                        ^^^^ expected `&str`, found integer
    |                                        ^^^^^^ expected `&str`, found floating-point number
    |                                      ^^^ expected `&str`, found integer
    |                                     ^^^ expected `&str`, found integer
    |                                    ^^ expected `&str`, found integer
    |                                    ^^^ expected `&str`, found integer
    |                                    ^^^^ expected `&str`, found integer
    |                                 ^^ expected `&str`, found integer
    |                               ^^ expected `&str`, found integer
    |                               ^^^ expected `&str`, found integer
    |                               ^^^^^^ expected `&str`, found floating-point number
    |                             ^ expected `&str`, found integer
    |                             ^^ expected `&str`, found integer
    |                             ^^^ expected `&str`, found integer
    |         ------------------------------- arguments to this function are incorrect
    | |_____^
    | |______________________________________^
    | |___________________________________________________________________^
   --> /rustc/e408947bfd200af42db322daf0fadfe7e26d3bd1/library/core/src/str/traits.rs:855:7
   --> src/services/bulk_color_approval_service.rs:729:5
   --> src/services/purchase_receipt_service.rs:714:37
   --> src/services/purchase_receipt_service.rs:715:31
   --> src/services/purchase_receipt_service.rs:716:29
   --> src/services/purchase_receipt_service.rs:717:33
   --> src/services/purchase_receipt_service.rs:720:36
   --> src/services/purchase_receipt_service.rs:982:41
   --> src/services/purchase_receipt_service.rs:983:48
   --> src/services/quotation_service.rs:580:29
   --> src/services/quotation_service.rs:581:31
   --> src/services/quotation_service.rs:582:40
   --> src/services/quotation_service.rs:603:29
   --> src/services/quotation_service.rs:604:29
   --> src/services/quotation_service.rs:715:36
   --> src/services/quotation_service.rs:716:38
   --> src/services/quotation_service.rs:717:40
   --> src/services/quotation_service.rs:731:36
   --> src/services/quotation_service.rs:733:40
   --> src/services/quotation_service.rs:749:29
   --> src/services/quotation_service.rs:750:31
   --> src/services/quotation_service.rs:751:40
   --> src/services/quotation_service.rs:757:36
   --> src/services/quotation_service.rs:774:29
   --> src/services/quotation_service.rs:775:31
   --> src/services/quotation_service.rs:776:40
   --> src/services/quotation_service.rs:783:36
   --> src/services/role_permission_service.rs:471:5
   --> src/services/user_service.rs:318:5
   ::: src/utils/unwrap_safe.rs:30:9
 30 |         rust_decimal::Decimal::from_str($x).expect("P9-1: 测试夹具 Decimal 字符串解析失败")
...   |
318 | /     pub async fn update_user(
319 | |         &self,
320 | |         user_id: i32,
321 | |         email: Option<String>,
326 | |         operator_id: i32,
327 | |     ) -> Result<user::Model, AppError> {
471 | /     async fn write_permission_audit(
472 | |         &self,
473 | |         change_type: &str,
474 | |         operator_id: i32,
479 | |         new_value: Option<String>,
480 | |     ) {
580 |             quantity: decs!(100),
581 |             unit_price: decs!(10),
582 |             unit_price_with_tax: decs!(11.3),
603 |             tax_rate: decs!(13),
604 |             moq: Some(decs!(50)),
714 |             gram_weight: Some(decs!(200)),
715 |             width: Some(decs!(150)),
715 |         assert_eq!(subtotal, decs!(1000));
716 |             quantity: decs!(100),
716 |         assert_eq!(tax_amount, decs!(130));
717 |             quantity_alt: decs!(50),
717 |         assert_eq!(total_amount, decs!(1130));
720 |             unit_price: Some(decs!(10)),
729 | /     async fn transition_to(
730 | |         &self,
731 |         assert_eq!(subtotal, decs!(1000));
731 | |         id: i64,
732 | |         target: ApprovalStatus,
733 |         assert_eq!(total_amount, decs!(1000));
737 | |         unblock_delivery: bool,
738 | |     ) -> Result<bulk_color_approval::Model, BulkColorApprovalError> {
749 |             quantity: decs!(200),
750 |             unit_price: decs!(20),
751 |             unit_price_with_tax: decs!(22.6),
757 |         assert_eq!(subtotal, decs!(5000)); // 1000 + 4000
774 |             quantity: decs!(3),
775 |             unit_price: decs!(33.333),
776 |             unit_price_with_tax: decs!(33.333),
783 |         assert_eq!(subtotal, decs!(100));
982 |         assert_eq!(item.quantity, decs!(100));
983 |         assert_eq!(item.unit_price, Some(decs!(10)));
error[E0308]: mismatched types
note: associated function defined here
warning: this function has too many arguments (8/7)
warning: deref which would be done by auto-deref
warning: doc list item without indentation
warning: unused import: `sea_orm::DatabaseConnection`
warning: unused variable: `txn`
